# jacobi-parallel

./: .gitignore  CMakeLists.txt  README.md
include/: constants.hpp  fileHandler.hpp  jacobi.hpp  mapClass.hpp  matrix.hpp  utils.hpp
src/: fileHandler.cpp  main.cpp  mapClass.cpp  matrix.cpp  utils.cpp  utimer.cpp
src/jacobi/: jacobiFF.cpp  jacobiOpenMP.cpp  jacobiSeq.cpp  jacobiThreads.cpp
